# patchworx

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  compose.yaml
.devcontainer/: Dockerfile  devcontainer.json
bazel_custom_rules/zig_proto/: defs.bzl
protos/: BUILD.bazel  files.proto  global.proto
services/ctest/: BUILD.bazel  ctest.cc  ctest.h
services/z3/: BUILD.bazel  Dockerfile  README.md  build.zig  build.zig.zon
services/z3-blob-storage/: build.zig  build.zig.zon
services/z3/src/: config.zig  file_handler.zig  main.zig  request_handler.zig
services/z3/src/coders/: lrc_coder.zig
services/z3/src/coders/interface/: coder.zig
services/z3/src/domain/: file.zig
services/z3/src/proto/: .gitignore  files.pb.zig
services/z3/src/storage/: disk_storage.zig
services/z3/src/storage/interface/: storage.zig
