module(
    name = "patchworkx",
)

###########################################
# Rules
###########################################

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_zig", version = "0.7.0")

zig = use_extension(
    "@rules_zig//zig:extensions.bzl",
    "zig",
)
zig.toolchain(zig_version = "0.13.0")

###########################################
# External dependencies
###########################################

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "zap_src",
    url = "https://github.com/zigzap/zap/archive/refs/tags/v0.9.1.tar.gz",
    build_file = "@//third_party/zap:BUILD.bazel",
    strip_prefix = "zap-0.9.1",
    integrity = "sha256-aXdZwQq6YW3X0H0znmPj8yM7oe6TS4Bh7FdOmGfdJ+w=",
)
